# shirty-ai-project

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: compute-release-version.sh
.github/workflows/: bench.yml  ci.yml  compose-e2e.yml  release.yml
bench/: README.md  collect-env.sh  compare.py  http-rps.sh  profile.sh  reload-latency.sh  run-all.sh  run-rotated.sh  tcp-connrate.sh  tcp-idle-conns.sh  tcp-latency.sh  tcp-throughput.sh  udp-duplex.sh  udp-flowchurn.sh  udp-flows.sh  udp-pps.sh
bench/lib/: common.sh  echo_tcp.py  echo_udp.py
cmake/: CPackDeb.cmake  CPackRpm.cmake
contrib/arch/: PKGBUILD  yggdrasil.install
contrib/config/: config.toml.example
contrib/systemd/: yggdrasil.service
contrib/sysusers.d/: yggdrasil.conf
contrib/tmpfiles.d/: yggdrasil.conf
crates/bench-tools/: Cargo.toml
crates/bench-tools/src/: http.rs  main.rs  report.rs  tcp.rs  udp.rs
crates/cli-defs/: Cargo.toml
crates/cli-defs/src/: completions.rs  lib.rs  yggdrasil.rs
crates/cli-defs/src/yggdrasilctl/: chain.rs  identity.rs  local.rs  mod.rs  validate.rs
crates/huginn/: Cargo.toml
crates/huginn/src/: cli.rs  commands.rs  config.rs  heartbeat.rs  log.rs  main.rs
crates/loadgen/: Cargo.toml
crates/loadgen/src/: tcp.rs
crates/ratatoskr/: Cargo.toml
crates/ratatoskr/benches/: noise.rs  rule_parse.rs
crates/ratatoskr/fuzz/: Cargo.toml  README.md  rust-toolchain.toml
crates/ratatoskr/fuzz/fuzz_targets/: chain_query_decode.rs  control_frame_decode.rs  enrollment_decode.rs  predicate_decode.rs  wire_parse.rs
crates/ratatoskr/src/: auth.rs  canary.rs  chain_query.rs  cli.rs  commands.rs  config.rs  control.rs  control_frame.rs  enrollment.rs  error.rs  heartbeat.rs  intro.rs  lib.rs  log.rs  main.rs  predicate.rs  pubkey.rs  rule.rs  tunnel.rs  wire.rs
crates/ratatoskr/src/rule/: cert_source.rs  file.rs  http_route.rs  mod.rs  rule_def.rs  set.rs  target.rs  tests.rs  types.rs  validate.rs
crates/yggdrasil/: Cargo.toml  build.rs
crates/yggdrasil-proto/: Cargo.toml
crates/yggdrasil-proto/benches/: branch_parse.rs  noise.rs
crates/yggdrasil-proto/src/: auth.rs  branch.rs  control.rs  enrollment.rs  error.rs  lib.rs  wire.rs
crates/yggdrasil/benches/: flow_table.rs  h3_forward.rs  udp_fast_path.rs
crates/yggdrasil/src/: cli.rs  commands.rs  config.rs  control.rs  health.rs  lan_cidrs.rs  lib.rs  log.rs  main.rs  metrics.rs  pending_peers.rs  profile.rs  systemd.rs
crates/yggdrasil/src/branches/: mod.rs  watcher.rs
crates/yggdrasil/src/chain/: acceptor.rs  client.rs  derive.rs  introspection.rs  mod.rs  predicate_extractor.rs  predicate_publisher.rs  query_router.rs  reliability.rs  tunnel_forwarder.rs  tunnel_initiator.rs  tunnel_terminator.rs
crates/yggdrasil/src/chain/client/: backoff.rs  body_handler.rs  handshake.rs  mod.rs  run_loop.rs  tests.rs
crates/yggdrasil/src/control/: dispatch.rs  mod.rs  server.rs  tests.rs
crates/yggdrasil/src/control/handlers/: accept.rs  acme.rs  canary.rs  chain.rs  mod.rs  rules_reload.rs
crates/yggdrasil/src/heartbeat/: mod.rs  peer_state.rs  server.rs
crates/yggdrasil/src/nat/: discovery.rs  mapper.rs  mod.rs
crates/yggdrasil/src/nat/wire/: mod.rs  natpmp.rs  pcp.rs
crates/yggdrasil/src/proxy/: canary.rs  certs.rs  forward.rs  h3_frontend.rs  h3_interpose.rs  http_frontend.rs  mod.rs  proxy_protocol.rs  resolver.rs  supervisor.rs  tcp.rs  udp.rs
crates/yggdrasil/src/proxy/acme/: account.rs  client.rs  dns01.rs  http01.rs  mod.rs  provider.rs  renewer.rs  storage.rs
crates/yggdrasil/src/proxy/acme/providers/: cloudflare.rs  mod.rs
crates/yggdrasil/src/proxy/certs/: loader.rs  mod.rs  origin.rs  store.rs  watcher.rs
crates/yggdrasil/src/proxy/http_frontend/: acceptor.rs  backend.rs  mod.rs  redirect.rs  request.rs  route.rs
crates/yggdrasil/src/proxy/supervisor/: cert_config.rs  handle.rs  mod.rs  reconcile.rs
crates/yggdrasil/src/proxy/udp/: batch_recv.rs  mod.rs  recvmmsg_linux.rs  sendmmsg_linux.rs
crates/yggdrasil/src/rules/: mod.rs  watcher.rs
crates/yggdrasil/tests/: canary_e2e.rs  chain_apply_e2e.rs  chain_https_predicate_e2e.rs  chain_introspection_e2e.rs  chain_predicate_e2e.rs  chain_tunnel_e2e.rs  chain_tunnel_forwarder_e2e.rs  chain_tunnel_initiator_e2e.rs  health.rs  heartbeat_invariance_tcp.rs  heartbeat_invariance_udp.rs  heartbeat_invariance_udp_multi_worker.rs  hot_reload.rs  http3_frontend.rs  http_frontend.rs  ip_change.rs  nat_traversal.rs  notify_reload.rs  terminal_mode.rs
crates/yggdrasil/tests/common/: mod.rs  nat_gateway.rs
crates/yggdrasilctl/: Cargo.toml  build.rs
crates/yggdrasilctl/src/: chain.rs  identity.rs  local.rs  main.rs  validate.rs
crates/yggdrasilctl/tests/: chain_diff.rs
docker/: Dockerfile  Dockerfile.e2e  bootstrap-chain.sh  bootstrap-quickstart.sh  bootstrap.sh  chain-loopback-echo-entrypoint.sh  compose.e2e.chain.yml  compose.e2e.quickstart.yml  compose.e2e.yml  echo-server.py  home-entrypoint.sh
docs/: architecture.md  cli-reference.md  configuration.md  development.md  install.md  operations.md  quickstart.md  security.md  test-bypasses.md
docs/cli-reference/: yggdrasil.md  yggdrasilctl.md
packaging/deb/: postinst  postrm  prerm
packaging/rpm/: post.sh  postun.sh  preun.sh
scripts/: stress.sh
tests/e2e/: concurrent_https_session.py  h3_probe.py  run-acme.sh  run-chain.sh  run-l7.sh  run-quickstart.sh  run.sh  slow_tcp_echo.py
