[workspace]
resolver = "2"
members = [
    "crates/cli-defs",
    "crates/ratatoskr",
    "crates/yggdrasil",
    "crates/yggdrasilctl",
    "crates/bench-tools",
]
exclude = [
    "crates/ratatoskr/fuzz",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.95"
license      = "MIT"
repository   = "https://github.com/bowerscd/yggdrasil"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1.40", features = ["full"] }
tokio-util   = { version = "0.7", features = ["rt"] }
futures      = "0.3"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = { version = "0.8", features = ["preserve_order"] }
postcard     = { version = "1", features = ["use-std"] }
hex          = { version = "0.4", features = ["serde"] }
base64       = "0.22"

# Errors / utility
thiserror    = "1"
anyhow       = "1"

# CLI
clap         = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap-markdown = "0.1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Crypto
snow         = { version = "0.9", default-features = false, features = ["default-resolver"] }
rand         = "0.8"
blake2       = "0.10"
zeroize      = { version = "1.8", features = ["zeroize_derive"] }

# Concurrency primitives
dashmap      = "6"
parking_lot  = "0.12"

# File watching
notify        = "6"
notify-debouncer-mini = "0.4"

# Metrics
metrics                    = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# Misc
humantime-serde = "1"
humantime       = "2"
libc            = "0.2"
hdrhistogram    = "7"
tempfile        = "3"
url             = { version = "2", features = ["serde"] }
criterion       = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest        = { version = "1", default-features = false, features = ["std"] }
sd-notify       = "0.5"
socket2         = { version = "0.5", features = ["all"] }

# ACME integration
instant-acme    = { version = "0.7", default-features = false, features = ["hyper-rustls", "ring"] }
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config"] }
x509-parser     = "0.16"
async-trait     = "0.1"

# L7 HTTP frontend
hyper           = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util      = { version = "0.1", features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }
http            = "1"
http-body-util  = "0.1"
tokio-rustls    = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls          = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rcgen           = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# HTTP/3 frontend
quinn           = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio", "log"] }
h3              = "0.0.8"
h3-quinn        = "0.0.10"

bytes           = "1"
pin-project-lite = "0.2"

# Internal crates
ratatoskr = { path = "crates/ratatoskr" }
yggdrasil = { path = "crates/yggdrasil" }
cli-defs  = { path = "crates/cli-defs" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
