[package]
name        = "bench-tools"
description = "Workspace-internal binaries used by the yggdrasil benchmark harness (loadgen, bench-echo)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "loadgen"
path = "src/main.rs"

[[bin]]
name = "bench-echo"
path = "src/bin/echo.rs"

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
hdrhistogram = { workspace = true }
humantime-serde = { workspace = true }
humantime    = { workspace = true }
socket2      = { workspace = true }
