[package]
name        = "bench-tools"
description = "Workspace-internal binaries used by the yggdrasil benchmark harness (loadgen, bench-echo)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "loadgen"
path = "src/main.rs"
bench = false  # exclude from `cargo bench` (libtest harness rejects criterion's --quick)

[[bin]]
name = "bench-echo"
path = "src/bin/echo.rs"
bench = false  # exclude from `cargo bench` (libtest harness rejects criterion's --quick)

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
hdrhistogram = { workspace = true }
humantime-serde = { workspace = true }
humantime    = { workspace = true }
socket2      = { workspace = true }
dashmap      = { workspace = true }

# HTTP/HTTPS bench support (loadgen http-rps + bench-echo http).
hyper          = { workspace = true }
hyper-util     = { workspace = true }
http           = { workspace = true }
http-body-util = { workspace = true }
bytes          = { workspace = true }
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
