[package]
name        = "ratatoskr"
description = "Shared protocol types, wire format and Noise-based auth for yggdrasil"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
postcard   = { workspace = true }
hex        = { workspace = true }
base64     = { workspace = true }
thiserror  = { workspace = true }
humantime-serde = { workspace = true }
url        = { workspace = true }
tracing    = { workspace = true }
snow       = { workspace = true }
rand       = { workspace = true }
blake2     = { workspace = true }
zeroize    = { workspace = true }

[dev-dependencies]
anyhow    = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "noise"
harness = false

[[bench]]
name    = "rule_parse"
harness = false
