[package]
name        = "yggdrasil"
description = "High-performance TCP/UDP reverse proxy for residential upstreams"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "yggdrasil"
path = "src/main.rs"

[dependencies]
ratatoskr = { workspace = true }
cli-defs  = { workspace = true }

tokio       = { workspace = true }
tokio-util  = { workspace = true }
futures     = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
humantime-serde = { workspace = true }
humantime   = { workspace = true }
postcard    = { workspace = true }

thiserror   = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
clap_complete = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

snow        = { workspace = true }
rand        = { workspace = true }
blake2      = { workspace = true }

dashmap     = { workspace = true }
parking_lot = { workspace = true }
socket2     = { workspace = true }
hdrhistogram = { workspace = true }

notify                = { workspace = true }
notify-debouncer-mini = { workspace = true }

metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# systemd readiness notification (no-op when NOTIFY_SOCKET unset).
sd-notify   = { workspace = true }

# L7 HTTP(S) frontend (Phase 6).
hyper           = { workspace = true }
hyper-util      = { workspace = true }
http            = { workspace = true }
http-body-util  = { workspace = true }
tokio-rustls    = { workspace = true }
rustls          = { workspace = true }
quinn           = { workspace = true }
h3              = { workspace = true }
h3-quinn        = { workspace = true }
rcgen           = { workspace = true }
url             = { workspace = true }
bytes           = { workspace = true }
pin-project-lite = { workspace = true }

# ACME integration (Phase D)
instant-acme    = { workspace = true }
reqwest         = { workspace = true }
hickory-resolver = { workspace = true }
x509-parser     = { workspace = true }
async-trait     = { workspace = true }

# CPU profiling (dev-only, opt-in via `--features profile`). The
# production build has zero overhead from this — `pprof` is gated
# behind the `profile` feature and the module that uses it is
# `#[cfg(feature = "profile")]`. The feature exists for bench-time
# investigation: capture a flamegraph or pprof file during a bench
# run, inspect with `inferno`/`go tool pprof` to see where the
# accept loop / copy_bidirectional path is actually spending time.
pprof           = { version = "0.13", features = ["flamegraph", "prost-codec", "frame-pointer"], optional = true }

[features]
default = []
profile = ["dep:pprof"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[build-dependencies]
cli-defs      = { workspace = true }
clap          = { workspace = true }
clap-markdown = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "flow_table"
harness = false

[[bench]]
name    = "h3_forward"
harness = false
