[package]
name        = "yggdrasilctl"
description = "Admin CLI for yggdrasil; speaks JSON over a Unix domain socket"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "yggdrasilctl"
path = "src/main.rs"

[dependencies]
ratatoskr = { workspace = true }
yggdrasil = { workspace = true }
cli-defs  = { workspace = true }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
hex         = { workspace = true }
toml        = { workspace = true }

thiserror   = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
clap_complete = { workspace = true }
humantime-serde = { workspace = true }
humantime   = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
cli-defs      = { workspace = true }
clap          = { workspace = true }
clap-markdown = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
